# rbx

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  README.md  activate-venv.sh  codecov.yml  conftest.py  debug_boolean_issue.py  glob_output.txt  index.html  install_prerelease.sh  junit.xml  main.py  mise.toml  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml  test_package_union_order.py  test_union_order.py
.claude/: .gitignore
.claude/skills/: commit.md
.cursor/rules/: linting.mdc  testing.mdc
.github/workflows/: docs.yml  lint.yml  release.yml  tests.yml
cpp-on-macos/: index.html
docs/: cpp-on-macos.md  extra.css  generators-and-rbx-h.md  index.md  migrating-to-v1.md  stack-limit.md
docs/intro/: configuration.md  installation.md  overview.md  windows-git.md
docs/overrides/: home.html
docs/plans/: 2026-02-20-contributor-workflow-design.md  2026-02-22-demacro-utils-design.md  2026-02-22-demacro-utils.md  2026-02-25-command-app-tabs-design.md  2026-02-25-command-input-context-menu-design.md  2026-02-25-command-input-context-menu.md  2026-02-26-task-queue-design.md  2026-02-26-task-queue.md  2026-02-28-limits-editor-design.md  2026-02-28-limits-editor.md  2026-03-03-package-path-annotation.md  2026-03-12-async-executor.md  2026-04-27-preset-variable-expansion-design.md  2026-04-27-preset-variable-expansion.md  2026-04-29-statement-groups-design.md  2026-04-29-statement-groups.md  2026-04-30-contest-problem-folder-validation-design.md  2026-04-30-contest-problem-folder-validation.md  2026-05-01-polygon-raw-tests-upload-design.md  2026-05-01-polygon-raw-tests-upload.md  2026-05-01-yaml-validation-error-rendering-design.md  2026-05-01-yaml-validation-error-rendering.md  2026-05-03-async-filelock-design.md  2026-05-03-async-filelock.md  2026-05-03-e2e-testing-strategy-design.md  2026-05-03-e2e-testing-strategy.md  2026-05-03-generator-determinism-check-design.md  2026-05-03-generator-determinism-check.md  2026-05-06-multi-contest-design.md  2026-05-06-multi-contest.md  2026-05-07-walkthrough-restructure-design.md  2026-05-12-clearer-executable-not-found-errors-design.md  2026-05-12-clearer-executable-not-found-errors.md  2026-05-12-compilation-warnings-livetasks-design.md  2026-05-12-compilation-warnings-livetasks.md  2026-05-12-contest-add-variant-design.md  2026-05-12-contest-add-variant.md  2026-05-12-irun-honor-testcase-validators-design.md  2026-05-12-irun-honor-testcase-validators.md  2026-05-12-tgen-default-include-design.md  (+93 more)
docs/setters/: cheatsheet.md  custom-checker-walkthrough.md  first-steps.md  packaging-walkthrough.md  statements.md  stress-testing-walkthrough.md  stress-testing.md  variables.md
docs/templates/: home.html
generators-and-rbx-h/: index.html
intro/configuration/: index.html
intro/installation/: index.html
intro/overview/: index.html
intro/windows-git/: index.html
migrating-to-v1/: index.html
plans/2026-02-20-contributor-workflow-design/: index.html
plans/2026-02-22-demacro-utils/: index.html
plans/2026-02-22-demacro-utils-design/: index.html
plans/2026-02-25-command-app-tabs-design/: index.html
plans/2026-02-25-command-input-context-menu/: index.html
plans/2026-02-25-command-input-context-menu-design/: index.html
plans/2026-02-26-task-queue/: index.html
plans/2026-02-26-task-queue-design/: index.html
plans/2026-02-28-limits-editor/: index.html
plans/2026-02-28-limits-editor-design/: index.html
plans/2026-03-03-package-path-annotation/: index.html
plans/2026-03-12-async-executor/: index.html
plans/2026-04-27-preset-variable-expansion/: index.html
plans/2026-04-27-preset-variable-expansion-design/: index.html
plans/2026-04-29-statement-groups/: index.html
plans/2026-04-29-statement-groups-design/: index.html
plans/2026-04-30-contest-problem-folder-validation/: index.html
plans/2026-04-30-contest-problem-folder-validation-design/: index.html
plans/2026-05-01-polygon-raw-tests-upload/: index.html
plans/2026-05-01-polygon-raw-tests-upload-design/: index.html
plans/2026-05-01-yaml-validation-error-rendering/: index.html
plans/2026-05-01-yaml-validation-error-rendering-design/: index.html
plans/2026-05-03-async-filelock/: index.html
plans/2026-05-03-async-filelock-design/: index.html
plans/2026-05-03-e2e-testing-strategy/: index.html
plans/2026-05-03-e2e-testing-strategy-design/: index.html
plans/2026-05-03-generator-determinism-check/: index.html
plans/2026-05-03-generator-determinism-check-design/: index.html
plans/2026-05-06-multi-contest/: index.html
plans/2026-05-06-multi-contest-design/: index.html
plans/2026-05-07-walkthrough-restructure-design/: index.html
plans/2026-05-12-clearer-executable-not-found-errors/: index.html
plans/2026-05-12-clearer-executable-not-found-errors-design/: index.html
plans/2026-05-12-compilation-warnings-livetasks/: index.html
plans/2026-05-12-compilation-warnings-livetasks-design/: index.html
plans/2026-05-12-contest-add-variant/: index.html
plans/2026-05-12-contest-add-variant-design/: index.html
plans/2026-05-12-irun-honor-testcase-validators/: index.html
plans/2026-05-12-irun-honor-testcase-validators-design/: index.html
plans/2026-05-12-tgen-default-include/: index.html
plans/2026-05-12-tgen-default-include-design/: index.html
plans/2026-05-13-cpp-compilation-warning-summarizer/: index.html
plans/2026-05-13-cpp-compilation-warning-summarizer-design/: index.html
plans/2026-05-15-statements-timing-profile/: index.html
plans/2026-05-15-statements-timing-profile-design/: index.html
plans/2026-05-19-boca-multi-language-mapping-design/: index.html
rbx/: __version__.py  annotations.py  clone.py  config.py  console.py  main.py  test.py  testing_utils.py  utils.py
rbx/box/: cd.py  (+63 more)
schemas/: Contest.json  Environment.json  LimitsProfile.json  Package.json  Preset.json  PresetLock.json  PresetRegistry.json  Statement.json
scripts/: bench_completion.py  try-completion-bash.sh  try-completion-zsh.sh
search/: search_index.json
stack-limit/: index.html
(+925 files in other folders)
